Themes/default/css/portal.css
/* Version 2.3.5; portal */

/* ************************************* */
/* Common styles                         */
/* ************************************* */
.sp_table
{
	border-collapse: collapse;
	border-spacing: 0;
	width: 100%;
}
.sp_center
{
	text-align: center;
}
.sp_right
{
	text-align: right;
}
.sp_left
{
	text-align: left;
}
.sp_middle
{
	vertical-align: middle;
}
.sp_top
{
	vertical-align: top;
}
.sp_auto_align
{
	margin: 0 auto;
}
.sp_float_left
{
	float: left;
}
.sp_float_right
{
	float: right;
}
.sp_regular_padding
{
	padding: 5px;
}
.sp_content_padding
{
	padding: 0 0.8em;
}
.sp_fullwidth
{
	width: 100%;
}
.sp_page_index
{
	width: 100%;
	text-align: center;
}
.sp_clear
{
	clear: both;
}
.sp_side_clear
{
	clear: both;
	line-height: 0.7em;
}

/* ************************************* */
/* List styles                           */
/* ************************************* */
.sp_list
{
	list-style-type: none;
	text-align: left;
	padding: 0 0 0 5px;
	line-height: 1.5em;
	margin: 0;
}
.sp_list_indent
{
	padding: 0 0 0 10px;
}
li.sp_list_top
{
	padding-top: 5px;
}
li.sp_list_bottom
{
	padding-bottom: 5px;
	border-bottom: 1px dashed #AAA;
}
li.sp_list_divider
{
	border-bottom: 1px solid #DDD;
}

/* ************************************* */
/* Block specific styles                 */
/* ************************************* */
.sp_online_flow
{
	max-height: 150px;
	height: auto !important;
	height: 150px;
	overflow: auto;
}
.sp_rss_flow
{
	max-height: 300px;
	height: auto !important;
	height: 300px;
	overflow: auto;
}
td.sp_top_poster, td.sp_staff, td.sp_blog, td.sp_articles
{
	width: 45px;
}
td.sp_staff_info
{
	padding: 7px 0;
	vertical-align: bottom;
}
td.sp_staff_divider
{
	border-bottom: 1px dashed #AAA;
}
td.sp_recent_icon
{
	vertical-align: middle;
	width: 5%;
}
td.sp_recent_subject
{
	width: 60%;
}
td.sp_recent_info
{
	width: 35%;
}
div.sp_image
{
	text-align: center;
	line-height: 1.4em;
	padding: 5px;
}
input.sp_search
{
	width: 95%;
}
.sp_acalendar
{
	border-collapse: collapse;
	border-spacing: 0;
	width: 100%;
	text-align: center;
}
td.sp_acalendar_day
{
	height: 20px;
	padding: 2px;
	text-align: center;
	vertical-align: top;
}
.sp_acalendar_divider
{
	width: 80%;
}
table.sp_blog, table.sp_articles, td.sp_shop_info
{
	line-height: 1.7em;
}
td.sp_shop_info
{
	font-size: smaller;
}
td.sp_shop_divider
{
	border-bottom: 1px dashed #AAA;
}
td.sp_shop
{
	width: 40px;
}
.sp_blog_title, .sp_articles_title
{
	border-bottom: 1px dashed #AAA;
}
#sp_menu
{
	width: 100%;
}
#sp_menu a
{
	margin: 0;
	line-height: 1.7em;
}
#sp_menu li
{
	position: relative;
}
#sp_menu li ul
{
	position: absolute;
	top: 0;
	left: 75%;
	width: 200px;
	background: #FFFFFF;
	border: 1px solid #AAA;
}
#sp_menu ul
{
	display: none;
}
#sp_menu li:hover ul 
{
	display: block;
}
.sp_article_icon
{
	margin: 5px 10px 0 0;
}
.sp_article_content
{
	margin-bottom: 0.5em;
}

/* ************************************* */
/* Main layout styles                    */
/* ************************************* */
#sp_main
{
	width: 100%;
	border-spacing: 5px;
	table-layout: fixed;
}
#sp_header, #sp_footer
{
	vertical-align: top;
	margin: 0 0.4em;
}
#sp_left
{
	vertical-align: top;
}
#sp_right
{
	vertical-align: top;
}
#sp_center
{
	vertical-align: top;
}
div.sp_block
{
	overflow: auto;
	padding: 0 0.5em;
}
div.sp_block_container
{
	overflow: auto;
}
table.sp_block
{
	border-collapse: collapse;
	border-spacing: 0;
	width: 100%;
}
td.sp_block_padding
{
	padding: 5px;
}
.sp_block_section
{
	padding-bottom: 0.7em;
}
body
{
	min-width: 750px;
}

/* ************************************* */
/* Shoutbox styles                       */
/* ************************************* */
table.shoutbox_container
{
	width: 100%;
	font-size: x-small;
}
.shoutbox_padding
{
	padding: 5px;
}
.shoutbox_body
{
	text-align: left;
	padding: 0;
}
.shoutbox_list_compact
{
	margin: 0;
	padding: 0;
	list-style: none;
	overflow: auto;
	height: 200px;
}
.shoutbox_list_compact li
{
	padding: 4px 0 4px 4px;
	border-bottom: 1px dashed #CCCCCC;
	border-left: 3px solid #DADADA;
}
.shoutbox_list_all
{
	margin: 0;
	padding: 0;
	list-style: none;
}
.shoutbox_list_all li
{
	padding: 4px 0 0 4px;
	border-left: 3px solid #DADADA;
}
li.shoutbox_time
{
	border-bottom: 1px dashed #CCCCCC;
	color: #777;
}
span.shoutbox_time
{
	color: #777;
	padding-left: 5px;
}
span.shoutbox_delete
{
	float: right;
	padding-right: 3px;
}
.shoutbox_page_index
{
	padding: 2px 0 3px 2px;
	line-height: 1.8em;
	text-align: center;
}
div.shoutbox_input
{
	padding-top: 5px;
}
input.shoutbox_input
{
	width: 65%;
}
li.shoutbox_warning
{
	border-left: 3px solid #F66;
	border-bottom: none;
	background: #FDD;
	color: #FF0000;
}
.shoutbox_me
{
	font-weight: bold;
	color: #FF0000;
}

/* ************************************* */
/* Admin styles                          */
/* ************************************* */
#sp_admin_main
{
	overflow: hidden;
	margin: 1em 0;
}
#sp_live_info
{
	width: 65%;
}
#sp_general_info
{
	width: 34%;
}
#spAnnouncements
{
	height: 18ex;
	overflow: auto;
	padding-right: 1ex;
}
#sp_live_info div.sp_content_padding, #sp_general_info div.sp_content_padding
{
	height: 18ex;
}
#sp_credits p
{
	margin: 0;
	padding: 0.5em 0;
}

#sp_manage_blocks h3.titlebg a.sp_float_right
{
	padding-top: 0.5em;
}
#sp_manage_blocks table.table_grid
{
	margin-bottom: 0.8em;
}
#sp_select_block_type
{
	width: 80%;
	margin: 0 auto;
}
#sp_select_block_type div.sp_content_padding
{
	height: 100px;
	padding: 0 1em;
}
#sp_select_block_type li
{
	float: left;
	width: 150px;
	height: 200px;
}
#sp_select_block_type table
{
	width: 100%;
}
#sp_select_block_type td
{
	width: 33%;
	vertical-align: top;
}
#sp_edit_block
{
	width: 70%;
	margin: 0 auto;
}
#sp_edit_block #sp_display_advanced
{
	padding-top: 0.6em;
	line-height: 2em;
}
#sp_edit_block ul.sp_display_list
{
	overflow: hidden;
	margin: 0;
}
#sp_edit_block ul.sp_display_list li
{
	float: left;
	width: 50%;
}

#sp_manage_articles table.table_grid
{
	margin: 0.4em 0;
}
#sp_article_add
{
	width: 65%;
	margin: 0 auto;
}
#sp_add_articles_category
{
	margin-bottom: 0.5em;
}
#sp_add_articles_list
{
	list-style: none;
}
#sp_add_articles_list_header
{
	list-style: none;
}
#sp_add_articles_list li
{
	margin-top: 0.2em;
}
#sp_edit_category
{
	width: 60%;
	margin: 0 auto;
}
#sp_add_articles_button
{
	padding-top: 0em;
}

#sp_manage_pages table.table_grid
{
	margin: 0.4em 0;
}
#sp_edit_page
{
	width: 70%;
	margin: 0 auto;
}

#sp_manage_shoutboxes table.table_grid
{
	margin: 0.4em 0;
}
#sp_edit_shoutbox
{
	width: 70%;
	margin: 0 auto;
}
#sp_prune_shoutbox
{
	width: 70%;
	margin: 0 auto;
}
#sp_prune_shoutbox dl.sp_form dt
{
	width: 65%;
}
#sp_prune_shoutbox dl.sp_form dd
{
	width: 34%;
}
#sp_shoutbox_redirect
{
	width: 50%;
	margin: 0 auto;
}

dl#sp_edit_style_title, dl#sp_edit_style_body
{
	width: 50%;
}
dl#sp_edit_style_title dt, dl#sp_edit_style_body dt
{
	width: 45%;
}
dl#sp_edit_style_title dd, dl#sp_edit_style_body dd
{
	width: 54%;
}

dl.sp_form
{
	margin: 0;
	clear: right;
	overflow: auto;
}
dl.sp_form dt
{
	font-weight: normal;
	float: left;
	clear: both;
	width: 31%;
	margin: 0.5em 0 0 0;
}
dl.sp_form dt strong
{
	font-weight: bold;
}
dl.sp_form dt span
{
	display: block;
}
dl.sp_form dd
{
	float: left;
	width: 68%;
	margin: 0.5em 0 0 0;
}
dl.sp_form img, #sp_add_articles_list_header img
{
	margin: 0 0.2em 0 0;
}
dl.sp_form dt a img, #sp_add_articles_list_header a img
{
	position: relative;
	top: 2px;
}

.sp_button_container
{
	text-align: center;
	padding-top: 1.5em;
}
#sp_rich_editor
{
	padding-left: 2em;
	padding-top: 1em;
}
#sp_text_editor
{
	padding: 1em;
}
#sp_text_editor textarea
{
	width: 100%;
}
#sp_text_editor input
{
	float: right;
	margin-right: 2px;
}

